<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/naming_challenge"
        android:layout_marginTop="20dp"
        android:id="@+id/textGame"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textGame"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:textSize="18sp"
        android:text="@string/explanation_game"
        android:id="@+id/instruction"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toGame"
        android:text="@string/start_game"
        android:layout_below="@id/instruction"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:id="@+id/guess"
        android:hint="@string/name_pokemon"
        android:layout_below="@id/textGame"
        android:visibility="gone"
        android:inputType="textVisiblePassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/guess"
        android:layout_toRightOf="@id/guess"
        android:layout_toEndOf="@id/guess"
        android:id="@+id/gameEnter"
        android:visibility="gone"
        android:text="@string/enter"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/guess"
        android:id="@+id/numberGuessed"
        android:visibility="gone"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/numberGuessed"
        android:paddingBottom="60dp"
        android:id="@+id/guessedAlready"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/restart"
        android:layout_alignParentBottom="true"
        android:text="@string/restart"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/giveUp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/give_up"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="40sp"
        android:text="@string/win"
        android:visibility="gone"
        android:id="@+id/winner"/>

</RelativeLayout>