<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/create_a_new_topic"
        android:layout_marginTop="40dp"
        android:id="@+id/textNew"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:hint="@string/title"
        android:id="@+id/newTitle"
        android:layout_below="@id/textNew"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:hint="@string/post"
        android:id="@+id/firstPost"
        android:layout_below="@id/newTitle"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_topic"
        android:id="@+id/toNew"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>