<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    android:background="#FFAAAA">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/wikia"
        android:layout_marginTop="20dp"
        android:id="@+id/textWikia"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explanation"
        android:layout_below="@id/textWikia"
        android:id="@+id/introduction"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_link"
        android:layout_below="@id/introduction"
        android:paddingTop="20dp"
        android:textSize="18sp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:id="@+id/quickLinks"
        tools:ignore="RtlSymmetry" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@id/quickLinks"
        android:id="@+id/firstQuickLink"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toPokemonList"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/list_of_pokemon"
        tools:ignore="RelativeOverlap" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goToSearch"
        android:layout_alignParentBottom="true"
        android:text="@string/search"/>

</RelativeLayout>