<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF0000"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:targetApi="lollipop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/create_a_new_topic"
        android:layout_marginTop="70dp"
        android:id="@+id/textNew"/>

    <EditText
        android:id="@+id/newTitle"
        android:layout_width="380dp"
        android:layout_height="55dp"
        android:layout_below="@id/textNew"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:layout_centerHorizontal="true"
        android:hint="@string/title"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:hint="@string/post"
        android:id="@+id/firstPost"
        android:layout_below="@id/newTitle"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_topic"
        android:id="@+id/toTopic"
        android:layout_below="@id/firstPost"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:onClick="toTopic"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/toForum"
        android:layout_alignTop="@id/toTopic"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="toForum"/>

</RelativeLayout>